SI format; typos

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -87,9 +87,9 @@ essere espressa secondo la legge:
 Onde evitare sostanziali aumenti di temperatura, oltre ad eventuali danni
 a questi stessi, si imprimono correnti impulsate sul circuito. 
 %e le conseguenti variazioni di resistenza nei componenti 
-La durata degli impulsi è inferiore ai 200 $\mu$s, che corrisponde ad
-un'energia impressa inferiore a 1 mJ (dunque ad un aumento della temperatura
-del semiconduttore inferiore a 0.5 K).
+La durata degli impulsi è inferiore ai 200 $\si{\us}$, che corrisponde ad
+un'energia impressa inferiore a 1 $\si{mJ}$ (dunque ad un aumento della
+temperatura del semiconduttore inferiore a 0.5 $\si{K}$).
 %Dovendo lavorare con correnti relativamente alte per il circuito sotto studio,
 %al fine di minimizzare effetti termici-dissipativi secondari ed evitare danni
 %all'apparato, si imprimono sui componenti correnti pulsate o di durate molto
@@ -114,7 +114,7 @@ le seguenti:
     \begin{center}
 	\begin{tabular}{lll}
 	    \toprule
-	    $R1$ nom. [$\Omega$] & $R1$ mult. [$\Omega$] \\ 
+		$R1$ nom. [$\si{\ohm}$] & $R1$ mult. [$\si{\ohm}$] \\ 
 	    \midrule
 	    \midrule
 	    $0.22 \pm 3 \% $         	& $0.226 \pm 0.008$ \\
@@ -130,7 +130,7 @@ le seguenti:
 		valore nominale e misurate con multimetro digitale. \label{tab:res}}
     \end{center}
 \end{table}
-Peruna descrizione del metodo di misurazione delle resistenze si rimanda a
+Per una descrizione del metodo di misurazione delle resistenze si rimanda a
 \nameref{app: A}.
 D'altra parte, per fornire una tensione regolabile e sufficientemente stabile
 durante un impulso, nel circuito si impiega il condensatore $C1$, la cui
@@ -140,7 +140,7 @@ istruzione di un microcontrollore, il condensatore alla serie $R1-D1$
 attraverso un MOS-FET.\\
 Il circuito è alimentato da 2 tensioni continue, fornite da un alimentatore
 stabilizzato switching e da un Buck Boost Converter.
-%,alle maglie di "carica/scarica" e di "switch" rispettivamente
+%,alle maglie di "switch" e di "carica/scarica" rispettivamente
 Un segnale fornito su $T2$ provoca la carica del condensatore mentre su $T3$
 la sua scarica. Un segnale (invertito) su $T1$ innesca l'impulso di corrente
 sul diodo.\\
@@ -180,8 +180,8 @@ di ciascuna delle due coppie separatamente.
 
 I pin volti alla lettura della tensione maggiore sono stati collegati al 
 centrale di un potenziometro, a sua volta collegato ad un generatore di 
-potenziale con tensione in ingresso pari a 3.3V . Gli altri due pin sono stati 
-invece collegati a massa.
+potenziale con tensione in ingresso pari a $3.3\si{V}$. Gli altri due pin
+sono stati invece collegati a massa.
 
 Variando la resistenza e, conseguentemente, la differenza di potenziale in 
 ingresso, è stato possibile calcolare media, deviazione standard campione
@@ -213,8 +213,8 @@ di best-fit relativi ad \verb+ADC0+ ed \verb+ADC1+ e le rispettive covarianze:
 	&\qquad \texttt{ADC0}	&&\qquad  \texttt{ADC1} \\
 	m_0 &= 0.7968 \pm  0.0033  \; \mathrm{mV/digit} 
 	& m_1  &= 0.7954 \pm 0.0026  \; \mathrm{mV/digit} \\
-	q_0 &= - 0.18 \pm 0.34  \; \mathrm{mV} 	
-	&q_1 &= 3.84  \pm 0.26  \; \mathrm{mV} \\
+	q_0 &= - 0.18 \pm 0.34  \; \si{\mV} 	
+	&q_1 &= 3.84  \pm 0.26  \; \si{mV} \\
 	%\var{m_0}  &= 1.1 \cdot 10^{-11}  \; \mathrm{V}^2 /\mathrm{digit}^2
 	%&\var{m_1} &= 7.0 \cdot 10^{-12}  \; \mathrm{V}^2 /\mathrm{digit}^2 \\
 	%\var{q_0} &=1.2 \cdot 10^{-7} \; \mathrm{V}^2
@@ -263,15 +263,15 @@ dati automatizzata tramite una
 {routine} programmata in \verb+Teensy+: il condensatore viene caricato
 ad una tensione prefissata; quando il MCU misura questo valore
 prestabilito, invia il segnale su $T1$ che avvia l'acquisizione sincronizzata
-e si attende un tempo 50 $\mu$s per permettere al MOS-FET di entrare in
-conduzione ($R2$ è stata scelta di 1k, dunque c'è un apprezzabile ritardo
+e si attende un tempo 50 $\si{\us}$ per permettere al MOS-FET di entrare in
+conduzione ($R2$ è stata scelta di 1\si{\k}, dunque c'è un apprezzabile ritardo
 tra segnale e impulso) e di scartare eventuali segnali spuri. A questo punto
 si inizia a memorizzare una serie da 100 coppie di letture -sincronizzate-
 (a meno di sfasamenti nell'ordine delle centinaia di nanosecondi), si ferma
 l'impulso e si trasmettono i dati al computer. Se la tensione al punto
-\verb+OUT2+ ha raggiunto valori maggiori di 3.3V l'acquisizione si ferma
-per non danneggiare \verb+Teensy+, altrimenti si ricomincia caricando il
-condensatore ad una tensione più alta.
+\verb+OUT2+ ha raggiunto valori maggiori di $3.3\si{V}$ l'acquisizione si
+ferma per non danneggiare \verb+Teensy+, altrimenti si ricomincia caricando
+il condensatore ad una tensione più alta.
 
 %================================================================
 %                   Analisi dati e Risultati
@@ -306,7 +306,7 @@ delle tangenti (o di Newton).
 Per una trattazione approfondita, si rimanda all'\nameref{app: C}.
 
 Risulta evidente, osservando i punti campionati con la resistenza da
-$R1 = 220$ k$\Omega$, la presenza di un rumore di natura non statistica
+$R1 = 220 \; \si{\kohm}$, la presenza di un rumore di natura non statistica
 molto maggiore delle incertezze sulle misure. 
 Questo si deve probabilmente all'influenza del circuito di lettura
 stesso sulle piccole correnti in gioco, che avevamo supposto trascurabile
@@ -319,13 +319,13 @@ nei risultati finali.
 Si riportano i valori ottimali dei parametri stimati dal fit e le relative
 covarianze: % Forse troppe cifre significative 0.2, 0.3 sono rumore rispetto a 7
 \begin{align*}
-	R_{\text{diodo}} &= 46.112\iffalse 18 \fi \pm 0.007\iffalse 2 \fi \; \rm m\Omega 
+	R_{\text{diodo}} &= 46.112\iffalse 18 \fi \pm 0.007\iffalse 2 \fi \; \si{\mohm} 
 	&\sigma_{I_0, \eta V_T} &= 0.97  \\
-	\eta V_T &= 47.579\iffalse 86 \fi \pm 0.003\iffalse 3 \fi \; \rm mV 	
+	\eta V_T &= 47.579\iffalse 86 \fi \pm 0.003\iffalse 3 \fi \; \si{\mV} 	
 	&\sigma_{I_0, R_d} &= -0.62 \\
-	I_0 &= 4.518\iffalse 0 \fi \pm 0.004\iffalse 3 \fi \; \rm nA
+	I_0 &= 4.518\iffalse 0 \fi \pm 0.004\iffalse 3 \fi \; \si{\nA}
 	&\sigma_{I_0, \text{ofst}} &= -0.49 \\
-	\text{offset} &=\; - 2.204\iffalse 3 \fi \pm 0.007 \iffalse 3 \fi \; \mu A
+	\text{offset} &=\; - 2.204\iffalse 3 \fi \pm 0.007 \iffalse 3 \fi \; \si{\uA}
 	&\sigma_{\eta V_T, R_d} &= -0.70  \\ 
 	\chi^2/\text{ndof} &= 72207/251066
 	&\sigma_{\eta V_T, \text{ofst}} &= -0.43\\
@@ -355,8 +355,8 @@ definisce i parametri fondamentali.
 		\includegraphics[width=16cm, height= 9.9cm]{10skip_semilog}
 	\caption{Dati acquisiti e funzione di best fit \eqref{eq: model} in 
 	scala semilogaritmica. A scopo illustrativo sono stati rappresentati anche
-	i dati della serie 220k. E' stato disegnato un punto ogni 10 per comodità
-	di visualizzazione. \label{fig: sck_log}}
+	i dati della serie $220\si{\kohm}$. E' stato disegnato un punto ogni 10
+	per comodità di visualizzazione. \label{fig: sck_log}}
 \end{figure}
 
 % Baldini e Fuso dicono sempre di specificare come si è implementato
@@ -410,8 +410,9 @@ corrente o di tensione.
 %================================================================
 \section{Appendice A: Misurazione delle reristenze $R1$}\label{app: A}
 
-All’interno delle misurazioni delle resistenze, sono stati adottati dei resistori
-contrassegnati da valori nominali che spaziano da 0.22 $\Omega$ a 220 $k\Omega$.
+All’interno delle misurazioni delle resistenze, sono stati adottati dei
+resistori contrassegnati da valori nominali che spaziano da 0.22 $\si{\ohm}$
+a 220 $\si{\kohm}$.
 Dunque il multimetro digitale non possiede una sensibilità sufficiente ai fini
 della stima delle resistenze più basse.\\  
 In primo luogo, queste ultime sono state misurate attraverso un metodo basato
@@ -420,24 +421,25 @@ $I_{\text{max}} = 5 A$). La strategia consiste nel fare scorrere una corrente
 continua entro un resistore. La stessa deve essere scelta ponendo attenzione
 che la potenza dissipata ($P =R \cdot I^{2}$) non superi la potenza nominale
 del resistore onde evitare danneggiamenti del componente per effetto termico.
-Nel contempo, la corrente \footnote{La corrente è stata misurata col multimetro,
-nonostante il fatto che l’abbiamo scelta a priori, ai fini di ottenere una maggiore precisione}
-e la differenza di potenziale ai capi del resistore vengono misurati attraverso
-due multimetri digitali. Dunque attraverso la legge di Ohm è stato possibile la
-stima delle resistenze in esame, riportate nella tabella sottostante con i relativi errori:
+Nel contempo, la corrente\footnote{Pur avendo stabilito la corrente a priori
+è stata misurata con multimetro per conoscere il valore con maggior precisione}
+e la differenza di potenziale ai capi del resistore vengono misurate attraverso
+due multimetri digitali. Dunque attraverso la legge di Ohm è stato possibile
+la stima delle resistenze in esame, riportate nella tabella sottostante con i
+relativi errori:
 
 \begin{table}[H]
 \begin{center}
     \begin{tabular}{lll}
      \toprule
-     $R1$ nom. [$\Omega$] & $R1$ [$\Omega$] \\
+	 $R1$ nom. [$\si{\ohm}$] & $R1$ [$\si{\ohm}$] \\
      \midrule
      \midrule
      $0.22 \pm 3 \% $     & $0.22 \pm 0.01 $ \\
      $2.2 \pm 5 \% $     & $2.19 \pm 0.03 $ \\
      $22 \pm 5 \% $     & $21.6 \pm 0.2 $ \\
-        $220 \pm 5 \% $     & $210.6 \pm 0.8 $ \\
-     $2.2\; \rm k \pm 5 \% $ & $2140 \pm 23$ \\
+	 $220 \pm 5 \% $     & $210.6 \pm 0.8$ \\
+	 $2.2\; \si{k} \pm 5 \% $ & $2140 \pm 23$ \\
      \bottomrule
     \end{tabular}
     \caption{I valori delle resistenze poste in serie al diodo, riportate in
@@ -445,17 +447,19 @@ stima delle resistenze in esame, riportate nella tabella sottostante con i relat
 \end{center}
 \end{table}
 
-Successivamente, è stato adottato un approccio differente. Ai fini di effettuare le medesime
-misure, è stato adottato il metodo della misura a quattro terminali (4T), attraverso un ohmetro
-specifico. Ai valori misurati sono stati sottratte le letture effettuate in assenza del resistore.
-In tal modo, sono stati cancellati gli errori dovuti alle resistenze intrinseche dei fili. Nella
-presente tabella sono riportati i risultati conseguiti:
+Successivamente, è stato adottato un approccio differente. Ai fini di
+effettuare le medesime misure, è stato adottato il metodo della misura a
+quattro terminali (4T), attraverso un ohmmetro specifico. Ai valori misurati
+sono stati sottratte le letture effettuate in assenza del resistore.
+In tal modo, sono stati compensati  gli errori dovuti alle resistenze
+intrinseche dei fili. Nella presente tabella sono riportati i risultati
+conseguiti:
 
 \begin{table}[H]
 \begin{center}
     \begin{tabular}{lll}
      \toprule
-     $R1$ nom. [$\Omega$] & $R1$ [$\Omega$] \\
+	 $R1$ nom. [$\si{\ohm}$] & $R1$ [$\si{\ohm}$] \\
      \midrule
      \midrule
      $0.22 \pm 3 \% $     & $0.226 \pm 0.008$ \\
@@ -473,7 +477,7 @@ presente tabella sono riportati i risultati conseguiti:
 Entrambi i metodi forniscono stime valide delle resistenze adottate. Dunque all’interno
 delle analisi successive, sono state adottate le misure conseguite a seguito della
 seconda strategia, caratterizzate da maggiore precisione.\\
-Le resistenze da 22 $k\Omega$ e 220 $k\Omega$ sono state invece misurate con l’uso
+Le resistenze da 22 $k\si{\ohm}$ e 220 $k\si{\ohm}$ sono state invece misurate con l’uso
 diretto di un multimetro digitale.
 
 %================================================================
