--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -406,10 +406,10 @@ sostituendo il condensatore con un opportuno circuito stabilizzatore di
 corrente o di tensione.
 
 \section{Conclusione proposta da Serena e Luca}
-Sulla base dell'analisi previamente effettuata, possiamo osservare che il
+Sulla base dell'analisi precedentemente effettuata, possiamo osservare che il
 $\chi^2$ risulta essere minore rispetto al suo valore atteso. Ciò \`e
-parzialmente dovuto alla correlazione degli errori inerenti i dati rilevati
-all'interno dei due canali d'ingresso. In aggiunta, come si evince anche dalla
+parzialmente dovuto alla correlazione degli errori inerenti ai dati rilevati
+all'interno dei due canali d'ingresso. In aggiunta, come si deduce anche dalla
 zona di maggior concentrazione dei residui all'interno dell'omonimo grafico,
 il convertitore analogico-digitale del MCU \`e caratterizzato da una funzione
 di risposta non lineare. Questo fattore era stato tenuto in considerazione
@@ -426,7 +426,7 @@ l'ipotesi di una componente resistiva interna al diodo. Analogamente, nel
 grafico in scala semilogaritmica, i dati assumono un andamento simile a quello
 caratteristico della curva di Shockley, ovvero approssimativamente
 rettilineo, per poi appiattirsi come un logaritmo al crescere della tensione.
-Dunque, possiamo asserire che l'andamento dei dati sperimentali risulta essere
+Dunque, possiamo affermare che l'andamento dei dati sperimentali risulta essere
 in buon accordo con la legge \eqref{eq: model}, per cui non abbiamo motivo di rigettarlo.
 Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
 e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
