--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -369,48 +369,11 @@ definisce i parametri fondamentali.
 %                          Conclusioni
 %================================================================
 \section{Conclusioni}
-Per prima cosa osserviamo dall'analisi appena effettuata, che il
-$\chi^2$ risulta minore rispetto al suo valore atteso. Ciò \`e
-parzialmente dovuto alla correlazione degli errori sulle misure eseguite
-dai due canali d'ingresso. In aggiunta, come si può notare dalla
-zona di maggior concentrazione dei punti nel grafico dei residui,
-il convertitore analogico-digitale del MCU \`e caratterizzato da una funzione
-di risposta non lineare. Questo fattore era stato tenuto in considerazione
-all'interno della calibrazione delle porte \verb+ADC0+ e \verb+ADC1+ mediante
-l'aggiunta in quadratura di un errore di natura non statistica a quelli stimati
-attraverso il fit lineare. Tale operazione ha portato, quindi, ad
-un'ulteriore diminuzione del $\chi^2$ all'interno del fit finale.
-Ulteriori osservazioni possono essere condotte riguardo alle evidenti analogie
-di carattere qualitativo fra la zona di maggior concentrazione dei
-campionamenti e la funzione di best fit.
-In primo luogo: all'interno del grafico in scala lineare, a correnti alte,
-i punti risultano essere disposti pressoch\`e linearmente, in accordo con
-l'ipotesi di una componente resistiva interna al diodo. Analogamente, nel
-grafico in scala semilogaritmica, i dati assumono un andamento simile a quello
-caratteristico della curva di Shockley, ovvero approssimativamente
-rettilineo, per poi appiattirsi come un logaritmo al crescere della tensione.
-Dunque, possiamo concludere che il fit con il modello \eqref{eq: model} è un
-buon fit e, entro i limiti sperimentali, questo risulta in buon accordo con
-il comportamento di un diodo reale, per cui non abbiamo motivo di rigettarlo.
-Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
-e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
-nelle condizioni di lavoro considerate. Questa modellizzazione, fra l'altro, 
-può risultare utile nelle simulazioni numeriche di circuiti con diodi in regimi
-impulsati su alte correnti, specialmente ove sia richiesto un dettaglio
-sulle cadute di tensione sui singoli componenti. 
-%Per tale scopo la legge \eqref{eq: model} \`e confermata essere una buona
-%approssimazione del diodo reale entro i limiti sperimentali.
-Sebbene questo studio sia concentrato su un unico diodo 1N4007, il metodo
-proposto pu\`o essere esteso per qualunque altro tipo di diodo, eventualmente
-sostituendo il condensatore con un opportuno circuito stabilizzatore di
-corrente o di tensione.
-
-\section{Conclusione proposta da Serena e Luca}
 Sulla base dell'analisi precedentemente effettuata, possiamo osservare che il
 $\chi^2$ risulta essere minore rispetto al suo valore atteso. Ciò \`e
 parzialmente dovuto alla correlazione degli errori inerenti ai dati rilevati
 all'interno dei due canali d'ingresso. In aggiunta, come si deduce anche dalla
-zona di maggior concentrazione dei residui all'interno dell'omonimo grafico,
+zona di maggior concentrazione dei punti nel grafico dei residui,
 il convertitore analogico-digitale del MCU \`e caratterizzato da una funzione
 di risposta non lineare. Questo fattore era stato tenuto in considerazione
 all'interno della calibrazione delle porte \verb+ADC0+ e \verb+ADC1+ mediante
@@ -427,7 +390,7 @@ grafico in scala semilogaritmica, i dati assumono un andamento simile a quello
 caratteristico della curva di Shockley, ovvero approssimativamente
 rettilineo, per poi appiattirsi come un logaritmo al crescere della tensione.
 Dunque, possiamo affermare che l'andamento dei dati sperimentali risulta essere
-in buon accordo con la legge \eqref{eq: model}, per cui non abbiamo motivo di rigettarlo.
+in accordo con la legge \eqref{eq: model}, per cui non abbiamo motivo di rigettarlo.
 Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi 
 e che la modellizzazione proposta sia una buona approssimazione del diodo reale 
 nelle condizioni di lavoro considerate. Questa modellizzazione, fra l'altro, 
